CUI-322  Slider accessibility, fix pointer events and tooltip visibility
Depending on the z-order of the handles, Slider handles were not
showing the correct cursor on hover. Adding pointer-events: none to the
value divs, which wrap the handles, and pointer-events: auto to the
handles corrects this.

Tooltips should have visibility hidden as well as opacity: 0 so that
they do not respond to mouse events when they are visually hidden.

--- a/source/less/components/slider.less
+++ b/source/less/components/slider.less
@@ -28,10 +28,10 @@
     transition: all 0.1s;
   }
   .slider-transition-slow {
-    -moz-transition: all 2s cubic-bezier(1, 0, 0.5, 0);
-    -webkit-transition: all 2s cubic-bezier(1, 0, 0.5, 0);
-    -o-transition: all 2s cubic-bezier(1, 0, 0.5, 0);
-    transition: all 2s cubic-bezier(1, 0, 0.5, 0);
+    -moz-transition: visibility 0s linear 2s, pointer-events 0s linear 2s, opacity 2s cubic-bezier(1, 0, 0.5, 0);
+    -webkit-transition: visibility 0s linear 2s, pointer-events 0s linear 2s, opacity 2s cubic-bezier(1, 0, 0.5, 0);
+    -o-transition: visibility 0s linear 2s, pointer-events 0s linear 2s, opacity 2s cubic-bezier(1, 0, 0.5, 0);
+    transition: visibility 0s linear 2s, pointer-events 0s linear 2s, opacity 2s cubic-bezier(1, 0, 0.5, 0);
   }
 
   .handle {
@@ -44,11 +44,15 @@
     .gradient(@slider-handle-gradient-start-color, @slider-handle-gradient-end-color);
     .border-radius(0.25rem);
     border: @px solid @slider-border-color;
+    pointer-events: auto;
     cursor: url('../images/cursors/openhand.cur'), default;
+    outline: none;
       &:hover,
       &.dragging {
         .gradient(lighten(@slider-handle-gradient-start-color, 15%), lighten(@slider-handle-gradient-end-color, 15%));
         .tooltip {
+          pointer-events: auto;
+          visibility: visible;
           opacity: 1;
           .slider-transition;
         }
@@ -58,6 +62,8 @@
         .gradient(lighten(@slider-handle-gradient-start-color, 15%), lighten(@slider-handle-gradient-end-color, 15%));
         outline: none;
         .tooltip {
+          pointer-events: auto;
+          visibility: visible;
           opacity: 1;
           .slider-transition;
         }
@@ -84,6 +90,8 @@
   .tooltip {
     position: absolute;
     opacity: 0;
+    pointer-events: none;
+    visibility: hidden;   
     left: -20*@px;
     top: -55*@px;
     .slider-transition-slow;
@@ -121,6 +129,7 @@
     width: 100%;
     height: 100%;
     z-index: auto;
+    pointer-events: none;
     &.focus {
       z-index: 1;
     }
